--- a/template/steps/approval.yml
+++ b/template/steps/approval.yml
@@ -3,6 +3,6 @@ steps:
   timeoutInMinutes: 1440 # task times out in 1 day
   inputs:
     notifyUsers: |
-      manasa.srinivas@pwc.com
+      sravan.kumar.pulle@pwc.com
     instructions: 'Please validate the plan and resume'
     onTimeout: 'resume'
